--- a/İstanbul Hatırası.html
+++ b/İstanbul Hatırası.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>İstanbul Hatırası</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,7 +30,7 @@
         <br>
         <!--Kitabın Kapak resmi gelir-->
         <img src="https://i.dr.com.tr/cache/500x400-0/originals/0001846444001-1.jpg" alt="Kitapın Kapak resmi">
-
+        <i class="fa-solid fa-heart" style="font-size: 30px; position: absolute; top: 30%; left: 90%; color: red;"></i>
 
 
         <br>
