--- a/Martin Eden.html
+++ b/Martin Eden.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Martin Eden</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<!--Giriş yapma veya üye olma yeri gelir-->
-    <div class="giris-menu">
-        <a href="#"> <b>Giriş Yap/Üye Ol</b> </a>
-  </div>
+    <div class="kapsayici">
 
-</div>
-<!--Sayfa menüsü gelir-->
-    <div class="vertical-menu">
-        <a href="#" class="active">Ana Sayfa</a>
-        <a href="http://127.0.0.1:5500/%C4%B0stanbul%20Hat%C4%B1ras%C4%B1.html"target="_blank">İstanbul Hatırası</a>
-        <a href="http://127.0.0.1:5500/Martin%20Eden.html"target="_blank"> Martin Eden</a>
-        <a href="http://127.0.0.1:5500/6%20Y%C4%B1l%20Tam%20Pansiyon.html"target="_blank">6 Yıl Tam Pansiyon</a>
-       
-      </div>
+
 
 <br>
 
@@ -30,7 +20,7 @@
  <h1>Martin Eden</h1>
 <!--Kitap hakkında genel bilgiler gelir-->
 <br>
- <ul>
+
     <div class="duz-cerceve">
        <b>Yazar:</b> Jack London
         <br>
@@ -41,8 +31,8 @@
     <br>
     <!--Kitabın Kapak resmi gelir-->
    <img src="https://i.dr.com.tr/cache/600x600-0/originals/0000000608697-1.jpg"  alt="Kitapın Kapak resmi" > 
-  
-</ul>
+   <i class="fa-solid fa-heart" style="font-size: 30px; position: absolute; top: 30%; left: 90%; color: red;"></i>
+
 <br>
 
 <!--Kitabın Konusu gelir-->
