--- a/6 Yıl Tam Pansiyon.html
+++ b/6 Yıl Tam Pansiyon.html
@@ -5,21 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>6 Yıl Tam Pansiyon</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="kapsayici">
+   
 
         <!--Kitabın İsmi gelir-->
         <h1>6 Yıl Tam Pansiyon</h1>
         <!--Kitap hakkında genel bilgiler gelir-->
         <br>
-        <ul>
             <div class="duz-cerceve">
                 <b>Yazar:</b> Tolga Gümüşay
                 <br>
@@ -30,20 +26,17 @@
             <br>
             <!--Kitabın Kapak resmi gelir-->
             <img src="https://i.dr.com.tr/cache/600x600-0/originals/0000000111458-1.jpg" alt="Kitapın Kapak resmi">
-            <i class="fa-solid fa-heart"
-                style="font-size: 30px; position: absolute; top: 28%; left: 90%; color: red;"></i>
-
-        </ul>
         <br>
         <!--Kitabın Konusu gelir-->
-        <p>
+        
         <div class="metin-cerceve3">
-            6 Yıl Tam Pansiyon, 6 yıldır aynı okulun yatılı öğrencileri olan bir grup gencin
+           <p>6 Yıl Tam Pansiyon, 6 yıldır aynı okulun yatılı öğrencileri olan bir grup gencin
             mezuniyet törenlerine 5 gün kala yaşadıkları olayları, beraber geçirdikleri 6 yılı anmalarını,
             birbirlerine karşı gizledikleri duyguların ortaya çıkmasını ve birbirlerinden
             ayrılıp yepyeni bir hayata, üniversiteye başlayacakları
             gerçeğiyle yüzleşen bir grup gencin hikayesini anlatan bir gençlik romanıdır.
             </p>
+            </div>
             <br>
             <!--Kitap Hakkında Yorum gelir-->
             <p>
