--- a/Martin Eden.html
+++ b/Martin Eden.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Martin Eden</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="kapsayici">
-
-
 
 <br>
 
@@ -31,21 +27,18 @@
     <br>
     <!--Kitabın Kapak resmi gelir-->
    <img src="https://i.dr.com.tr/cache/600x600-0/originals/0000000608697-1.jpg"  alt="Kitapın Kapak resmi" > 
-   <i class="fa-solid fa-heart" style="font-size: 30px; position: absolute; top: 30%; left: 90%; color: red;"></i>
-
 <br>
 
 <!--Kitabın Konusu gelir-->
 <p>
-    
-    <div class="metin-cerceve2" >
-        Martin Eden çalışkan ama bir o kadar da hoyrat bir denizci olan Martin Eden’ın 
-        bir kavga sırasında tanıştığı üst sınıftan gelen Arthur’un kız kardeşi Ruth’a olan aşkı
-        ile başlayan değişimini, kendini geliştirme yolculuğunu anlatır.
-        Martin Eden’ın aşkı uğruna eğitimsiz genç bir işçiden başarılı 
-        ve rafine bir yazara dönüşme mücadelesini ve bu yolda çektiği zorlukları 
-        anlatan yarı otobiyografik bir “künstlerroman” dır. 
-    
+ <div class="metin-cerceve2">
+    Martin Eden çalışkan ama bir o kadar da hoyrat bir denizci olan Martin Eden’ın 
+    bir kavga sırasında tanıştığı üst sınıftan gelen Arthur’un kız kardeşi Ruth’a olan aşkı
+    ile başlayan değişimini, kendini geliştirme yolculuğunu anlatır.
+    Martin Eden’ın aşkı uğruna eğitimsiz genç bir işçiden başarılı 
+    ve rafine bir yazara dönüşme mücadelesini ve bu yolda çektiği zorlukları 
+    anlatan yarı otobiyografik bir “künstlerroman” dır. 
+ </div>
 <br>
 <!--Kitap Hakkında Yorum gelir-->
 <br>
