--- a/İstanbul Hatırası.html
+++ b/İstanbul Hatırası.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>İstanbul Hatırası</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="kapsayici">
+   
 
 
 
@@ -30,23 +29,22 @@
         <br>
         <!--Kitabın Kapak resmi gelir-->
         <img src="https://i.dr.com.tr/cache/500x400-0/originals/0001846444001-1.jpg" alt="Kitapın Kapak resmi">
-        <i class="fa-solid fa-heart" style="font-size: 30px; position: absolute; top: 30%; left: 90%; color: red;"></i>
-
 
         <br>
         <!--Kitabın Konusu gelir-->
         <p>
-        <div class="metin-cerceve1">
-            İstanbul Hatırası, Tarihî yarımadada işlenen sıra dışı bir cinayetleri
-            ekibi Zeynep ve Ali ile beraber çözmeye çalışan ana karakterimiz Başkomser Nevzat'ı anlatır.
-            Kitaptaki katil, avucuna antika bir sikke bıraktığı kurbanlarının cesedi üzerinden çözülmesini istediği bazı
-            mesajlar vermiştir.
-            Aynı cinayet ritüelinin parçası olmuş kurbanlar peşi sıra gelir; tüm kurbanların elinde bir sikke vardır
-            ve her biri şehrin parlak dönemlerinde yaşamış bir imparatorunun döneminden kalma tarihi bir yapının önüne
-            bırakılmıştır.
-            Kurbanların ortak özelliği, İstanbul’a olan ihanetleridir ve iş karmaşık bir hal almaya başladıkça
-            karakterlerimiz daha fazla cinayet işlenmeden katili bulmak zorundadır.
-            </p>
+      <div class="metin-cerceve1">
+        İstanbul Hatırası, Tarihî yarımadada işlenen sıra dışı bir cinayetleri
+        ekibi Zeynep ve Ali ile beraber çözmeye çalışan ana karakterimiz Başkomser Nevzat'ı anlatır.
+        Kitaptaki katil, avucuna antika bir sikke bıraktığı kurbanlarının cesedi üzerinden çözülmesini istediği bazı
+        mesajlar vermiştir.
+        Aynı cinayet ritüelinin parçası olmuş kurbanlar peşi sıra gelir; tüm kurbanların elinde bir sikke vardır
+        ve her biri şehrin parlak dönemlerinde yaşamış bir imparatorunun döneminden kalma tarihi bir yapının önüne
+        bırakılmıştır.
+        Kurbanların ortak özelliği, İstanbul’a olan ihanetleridir ve iş karmaşık bir hal almaya başladıkça
+        karakterlerimiz daha fazla cinayet işlenmeden katili bulmak zorundadır.
+      </div>
+
             <br>
             <!--Kitap Hakkında Yorum gelir-->
             <p>
