--- a/6 Yıl Tam Pansiyon.html
+++ b/6 Yıl Tam Pansiyon.html
@@ -16,6 +16,7 @@
         <h1>6 Yıl Tam Pansiyon</h1>
         <!--Kitap hakkında genel bilgiler gelir-->
         <br>
+        <h2>Kitap Bilgileri</h2>
             <div class="duz-cerceve">
                 <b>Yazar:</b> Tolga Gümüşay
                 <br>
@@ -28,7 +29,7 @@
             <img src="https://i.dr.com.tr/cache/600x600-0/originals/0000000111458-1.jpg" alt="Kitapın Kapak resmi">
         <br>
         <!--Kitabın Konusu gelir-->
-        
+        <h2>Kitabın Konusu</h2>
         <div class="metin-cerceve3">
            <p>6 Yıl Tam Pansiyon, 6 yıldır aynı okulun yatılı öğrencileri olan bir grup gencin
             mezuniyet törenlerine 5 gün kala yaşadıkları olayları, beraber geçirdikleri 6 yılı anmalarını,
@@ -41,6 +42,7 @@
             <!--Kitap Hakkında Yorum gelir-->
             <p>
                 <br>
+                <h2>Kitap Hakkındaki Yorumumuz</h2>
             <div class="yorum-cerceve">
 
                 <br>
