--- a/Martin Eden.html
+++ b/Martin Eden.html
@@ -16,7 +16,7 @@
  <h1>Martin Eden</h1>
 <!--Kitap hakkında genel bilgiler gelir-->
 <br>
-
+<h2>Kitap Bilgileri</h2>
     <div class="duz-cerceve">
        <b>Yazar:</b> Jack London
         <br>
@@ -30,6 +30,7 @@
 <br>
 
 <!--Kitabın Konusu gelir-->
+<h2>Kitabın Konusu</h2>
 <p>
  <div class="metin-cerceve2">
     Martin Eden çalışkan ama bir o kadar da hoyrat bir denizci olan Martin Eden’ın 
@@ -42,11 +43,10 @@
 <br>
 <!--Kitap Hakkında Yorum gelir-->
 <br>
+<h2>Kitap Hakkındaki Yorumumuz</h2>
 <p>
 <br>
 <div class="yorum-cerceve">
-
-
     Merhaba arkadaşlar ben Dilan ve bugün sizlere Jack London’ın ölümsüz eseri Martin Eden’ın yorumu ile geldim !
     Martin Eden, bir denizci olarak çalışan Martin Eden’ın üst sınıftan soylu bir kız olan Ruth Morse’a olan aşkı ile beraber kendini geliştirip bir yazar olma yolculuğunu anlatıyor.
     Eser bir sanatçının çıraklıktan olgunluğa geçiş sürecini işleyen bir “künstlerroman” roman olma özelliğini taşıyor.
@@ -80,6 +80,7 @@
        
    </ul>
    
+
     <script src="code.js"></script>
 </body>
 </html>
