--- a/İstanbul Hatırası.html
+++ b/İstanbul Hatırası.html
@@ -7,18 +7,15 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>İstanbul Hatırası</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
-   
-
-
-
-        <br>
-        <!--Kitabın İsmi gelir-->
+<!--Kitabın İsmi Gelir-->
         <h1>İstanbul Hatırası</h1>
         <!--Kitap hakkında genel bilgiler gelir-->
         <br>
+        <h2>Kitap Bilgileri</h2>
         <div class="duz-cerceve">
                 <b>Yazar:</b> Ahmet Ümit
                 <br>
@@ -32,8 +29,11 @@
 
         <br>
         <!--Kitabın Konusu gelir-->
+
+        <h2>Kitabın Konusu</h2>
         <p>
       <div class="metin-cerceve1">
+
         İstanbul Hatırası, Tarihî yarımadada işlenen sıra dışı bir cinayetleri
         ekibi Zeynep ve Ali ile beraber çözmeye çalışan ana karakterimiz Başkomser Nevzat'ı anlatır.
         Kitaptaki katil, avucuna antika bir sikke bıraktığı kurbanlarının cesedi üzerinden çözülmesini istediği bazı
@@ -44,12 +44,12 @@
         Kurbanların ortak özelliği, İstanbul’a olan ihanetleridir ve iş karmaşık bir hal almaya başladıkça
         karakterlerimiz daha fazla cinayet işlenmeden katili bulmak zorundadır.
       </div>
-
+      </p>
             <br>
             <!--Kitap Hakkında Yorum gelir-->
-            <p>
+            <h2>Kitap Hakkındaki Yorumumuz</h2>
+           <p>
             <div class="yorum-cerceve">
-
                 Merhaba arkadaşlar ben Dilan ve bugün sizlere Ahmet Ümit’in çok sevdiğim kitabı İstanbul Hatırası’nın
                 yorumu ile geldim !
                 İstanbul Hatırası, Tarihi Yarımada’da işlenen bir dizi seri cinayeti çözmeye çalışan ana karakterimiz
@@ -72,7 +72,7 @@
                 sözü de beni çok etkilemişti.
                 Uzun lafın kısası İstanbul hakkında kültürlenmek isteyen polisiye meraklılarına kesinlikle öneririm,
                 yazarın diğer kitaplarına bakmanızı da tavsiye ederim.
-
+                
             </div>
             </p>
             <!-- Puanlama Yeri Gelir-->
